--- a/docs/main.css
+++ b/docs/main.css
@@ -31,10 +31,68 @@ small {
     padding: 10px;
 }
 
-button {
+/* button {
     display: none;
+} */
+input[type=button] {
+    font-family: monospace;
 }
 
 td {
     padding-right: 10px;
 }
+
+
+
+/* Style the tab */
+.tab {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f4f4f4;
+}
+
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    white-space: nowrap;
+    flex-shrink: 0;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 9px 12px;
+    transition: 0.3s;
+    font-size: 15px;
+    font-family: inherit;
+}
+
+/* Add mobile-specific adjustments */
+@media screen and (max-width: 600px) {
+    .tab button {
+        padding: 5px 7px;
+        font-size: 14px;
+        font-family: inherit;
+    }
+}
+
+
+/* Change background color of buttons on hover */
+    .tab button:hover {
+    background-color: #ddd;
+    font-family: inherit;
+    }
+
+    /* Create an active/current tablink class */
+    .tab button.active {
+    background-color: #ccc;
+    }
+
+    /* Style the tab content */
+    .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    }
