add Pedro acknowledgement, modify spacing

--- a/docs/main.css
+++ b/docs/main.css
@@ -5,7 +5,7 @@ body {
     /* margin-top: 40px;
     margin-left: 100px;
     margin-right: 100px;*/
-    max-width: 870px;
+    max-width: 880px;
     margin: 40px auto;
     /* background-color: lightgray; */
 }
@@ -42,7 +42,17 @@ td {
     padding-right: 10px;
 }
 
+.thanks {
+    float: inline-end;
+}
 
+.columns {
+	columns: 2 20px;
+}
+
+.columns__item {
+	break-inside: avoid;
+}
 
 /* Style the tab */
 .tab {
