--- a/docs/main.css
+++ b/docs/main.css
@@ -19,6 +19,12 @@ h1 {
     padding: 0px 0px 20px 50px;
 }
 
+#header-logo {
+    margin-top: -36px;
+    margin-bottom: -30px;
+    margin-left: -14px;
+}
+
 h2 {
     font-size: 28px;
 }
