--- a/docs/main.css
+++ b/docs/main.css
@@ -22,7 +22,8 @@ h1 {
 #header-logo {
     margin-top: -36px;
     margin-bottom: -30px;
-    margin-left: -14px;
+    margin-left: -80px;
+    margin-right: 10px;
 }
 
 h2 {
